--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,3 +128,28 @@ jobs:
         with:
           name: allure-report
           path: allure-results/**
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: report
+    if: always()
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Download Allure Report Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: allure-report
+
+      - name: Copy Allure Report to docs
+        run: |
+          mkdir -p docs  
+          cp -r allure-results/* docs/  
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs  
+          publish_branch: master
