--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
           
       - name: Set Test Tag
         id: setTag
-        shell: pwsh  # Specify the shell as PowerShell
+        shell: pwsh  
         run: |
           if ($env:GITHUB_EVENT_NAME -eq "push") {
             echo "testTag=all" >> $env:GITHUB_ENV
@@ -142,10 +142,13 @@ jobs:
         with:
           name: allure-report
 
+      - name: List Allure Report Artifact
+        run: ls -R allure-report 
+
       - name: Copy Allure Report to docs
         run: |
           mkdir -p docs  
-          cp -r allure-results/* docs/  
+          cp -r allure-report/allure-results/* docs/  
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
