--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,19 +142,18 @@ jobs:
         with:
           name: allure-report
 
-      - name: List directory contents
-        run: ls -R /home/runner/work/SpecflowProject/SpecflowProject
-
-      - name: List Allure Report Artifact
-        run: ls -R 
-
-      - name: List Allure Report Artifact
-        run: ls -R allure-results
-
       - name: Copy Allure Report to docs
         run: |
-          mkdir -p docs  
-          cp -r allure-report/allure-results/* docs/  
+            mkdir -p docs
+            cp -r index.html docs/  
+            cp -r export docs/       
+            cp -r plugin docs/       
+            cp -r widgets docs/      
+            cp -r history docs/  
+            cp -r data docs/         
+            cp -r favicon.ico docs/  
+            cp -r app docs/          
+            cp -r styles.css docs/    
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
