--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,7 +131,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: allure-results/**
+          path: allure-results/
       - name: Deploy to github pages
         id: deployment
         uses: actions/deploy-pages@v1
