--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,6 +97,7 @@ jobs:
     permissions:
       id-token: write
       contents: write
+      pages: write
     steps:
       - name: Download Build Artifacts
         uses: actions/download-artifact@v3
@@ -142,7 +143,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
         with:
-          emit_telemetry: false
           token: ${{ secrets.GITHUB_TOKEN }}
           artifact_name: github-pages
           preview: false
